--- a/package.json
+++ b/package.json
@@ -9,13 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.1.8",
+    "@react-navigation/native-stack": "^7.3.12",
+    "@react-navigation/stack": "^7.3.1",
+    "crypto-js": "^4.2.0",
     "expo": "~52.0.46",
+    "expo-file-system": "^18.1.10",
+    "expo-sqlite": "~15.1.4",
     "expo-status-bar": "~2.0.1",
+    "formik": "^2.4.6",
     "react": "18.3.1",
-    "react-native": "0.76.9"
+    "react-native": "0.76.9",
+    "react-native-crypto-js": "^1.0.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/crypto-js": "^4.2.2",
+    "@types/react": "~18.3.12",
+    "@types/react-native-crypto-js": "^1.0.3",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
